# solana-cli-sentinel

./: .env.example  .gitignore  CLAUDE.md  Cargo.toml  PRD.md  PROGRESS.md  README.md
src/: error.rs  main.rs
src/analysis/: mod.rs
src/commands/: mod.rs  status.rs  watch.rs
src/config/: mod.rs
src/llm/: mod.rs
src/metrics/: mod.rs
src/notify/: mod.rs
src/utils/: mod.rs
