[package]
name = "solana-cli-sentinel"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.38", features = ["full"] }

solana-rpc-client = "2.0"
solana-sdk = "2.0"

reqwest = { version = "0.12", features = ["json"] }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

clap = { version = "4.5", features = ["derive"] }

anyhow = "1.0"
dotenvy = "0.15"

# Типизированные ошибки с автоматической реализацией Display/Error через derive-макросы
thiserror = "1.0"

# Структурированное логирование: трейты и макросы (info!, warn!, error!, debug!)
tracing = "0.1"

# Подписчик для tracing: форматирует и выводит логи; читает уровень из RUST_LOG
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Работа с датой/временем; нужен для хранения времени последнего алерта (cooldown)
chrono = { version = "0.4", features = ["serde"] }

# Парсинг human-readable длительностей: "10s", "5m" из env-переменных
humantime = "2.1"
