[package]
name = "solana-cli-sentinel"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.38", features = ["full"] }

solana-rpc-client = "2.0"
solana-sdk = "2.0"

reqwest = { version = "0.12", features = ["json"] }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

clap = { version = "4.5", features = ["derive"] }

anyhow = "1.0"
dotenvy = "0.15"

thiserror = "1.0"

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

chrono = { version = "0.4", features = ["serde"] }

humantime = "2.1"
